// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with a secret 1`] = `
<Fragment>
  <h6>
    Secrets
  </h6>
  <LoadingWrapper
    loaded={true}
    size="small"
  >
    <table>
      <thead>
        <tr
          className="flex"
        >
          <th
            className="col-2"
          >
            NAME
          </th>
          <th
            className="col-2"
          >
            TYPE
          </th>
          <th
            className="col-7"
          >
            DATA
          </th>
        </tr>
      </thead>
      <tbody>
        <SecretItem
          key="secrets/foo"
          secret={
            Object {
              "kind": "Secret",
              "metadata": Object {
                "name": "foo",
              },
            }
          }
        />
      </tbody>
    </table>
  </LoadingWrapper>
</Fragment>
`;

exports[`when fetching secrets loading spinner matches the snapshot 1`] = `
<Fragment>
  <h6>
    Secrets
  </h6>
  <LoadingWrapper
    loaded={false}
    size="small"
  >
    <table>
      <thead>
        <tr
          className="flex"
        >
          <th
            className="col-2"
          >
            NAME
          </th>
          <th
            className="col-2"
          >
            TYPE
          </th>
          <th
            className="col-7"
          >
            DATA
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </LoadingWrapper>
</Fragment>
`;
